<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraint"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainMenu">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="196dp"
        android:layout_height="122dp"
        android:layout_marginBottom="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/christmas_bean" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="395dp"
        android:layout_height="200dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="102dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="32dp"
            android:layout_marginRight="20dp">

            <TextView
                android:id="@+id/welcomeMessage"
                android:layout_width="370dp"
                android:layout_height="100dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="-1dp"
                android:layout_marginBottom="0dp"
                android:fontFamily="casual"
                android:text="@string/welcome"
                android:textColor="#000000"
                android:textColorHint="#090909"
                android:textSize="20sp" />
        </RelativeLayout>

    </LinearLayout>

    <Button
        android:id="@+id/userSettings"
        android:layout_width="130dp"
        android:layout_height="75dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="184dp"
        android:drawableRight="@android:drawable/ic_menu_manage"
        android:text="@string/User_Settings"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/userMarket"
        app:layout_constraintEnd_toStartOf="@+id/imageView4"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/userCollection"
        android:layout_width="130dp"
        android:layout_height="75dp"
        android:layout_marginStart="36dp"
        android:layout_marginBottom="288dp"
        android:drawableRight="@drawable/fui_ic_anonymous_white_24dp"
        android:text="@string/Collection"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/userMessaging"
        android:layout_width="130dp"
        android:layout_height="75dp"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="288dp"
        android:drawableRight="@android:drawable/sym_action_email"
        android:text="@string/messaging"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.886"
        app:layout_constraintStart_toEndOf="@+id/userCollection" />

    <Button
        android:id="@+id/userMarket"
        android:layout_width="130dp"
        android:layout_height="75dp"
        android:layout_marginBottom="160dp"
        android:drawableRight="@android:drawable/ic_menu_view"
        android:text="@string/Market"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="196dp"
        android:layout_height="122dp"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imageView2"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/kobebrucelee" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="120dp"
        android:layout_height="94dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="56dp"
        app:layout_constraintBottom_toTopOf="@+id/userCollection"
        app:layout_constraintEnd_toStartOf="@+id/userSettings"
        app:layout_constraintHorizontal_bias="0.705"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/yeezy" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="120dp"
        android:layout_height="94dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="56dp"
        app:layout_constraintBottom_toTopOf="@+id/userMessaging"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/lbj" />


</androidx.constraintlayout.widget.ConstraintLayout>

