<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="350dp"
        android:layout_height="700dp"
        android:layout_gravity="center">

        <TextView
            android:id="@+id/textView8"
            android:layout_width="241dp"
            android:layout_height="60dp"
            android:layout_marginTop="220dp"
            android:text="@string/shoe_year"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.513"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/shoeInformation" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="241dp"
            android:layout_height="60dp"
            android:layout_marginTop="288dp"
            android:text="@string/shoe_condition"
            app:layout_constraintBottom_toTopOf="@+id/textView10"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.504"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/shoeInformation"
            app:layout_constraintVertical_bias="0.355" />

        <EditText
            android:id="@+id/useAns4"
            android:layout_width="111dp"
            android:layout_height="34dp"
            android:layout_marginTop="22dp"
            android:layout_marginBottom="4dp"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/textView9"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.263"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView9"></EditText>

        <EditText
            android:id="@+id/useAns3"
            android:layout_width="111dp"
            android:layout_height="34dp"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/textView8"
            app:layout_constraintEnd_toEndOf="@+id/textView8"
            app:layout_constraintHorizontal_bias="0.053"
            app:layout_constraintStart_toStartOf="@+id/textView8"
            tools:ignore="SpeakableTextPresentCheck"></EditText>

        <TextView
            android:id="@+id/textView10"
            android:layout_width="241dp"
            android:layout_height="60dp"
            android:layout_marginTop="96dp"
            android:text="@string/shoe_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.504"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView8" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="217dp"
            android:layout_height="65dp"
            android:layout_marginEnd="64dp"
            android:layout_marginBottom="24dp"
            android:text="Enter Wanted Price"
            app:layout_constraintBottom_toTopOf="@+id/marketAvailability"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView10"
            app:layout_constraintVertical_bias="1.0" />

        <EditText
            android:id="@+id/useAns"
            android:layout_width="112dp"
            android:layout_height="39dp"
            android:layout_marginBottom="10dp"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/textView2"
            app:layout_constraintEnd_toEndOf="@+id/textView2"
            app:layout_constraintHorizontal_bias="0.085"
            app:layout_constraintStart_toStartOf="@+id/textView2"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck,TouchTargetSizeCheck"></EditText>

        <TextView
            android:id="@+id/textView7"
            android:layout_width="241dp"
            android:layout_height="60dp"
            android:layout_marginTop="32dp"
            android:text="@string/shoe_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.504"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ShoeName" />

        <EditText
            android:id="@+id/useAns2"
            android:layout_width="111dp"
            android:layout_height="34dp"
            android:layout_marginBottom="4dp"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/textView7"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.263"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ShoeName"
            app:layout_constraintVertical_bias="1.0"
            tools:ignore="TouchTargetSizeCheck"></EditText>

        <EditText
            android:id="@+id/useAns1"
            android:layout_width="111dp"
            android:layout_height="34dp"
            android:layout_marginBottom="8dp"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/ShoeName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.263"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck"></EditText>

        <TextView
            android:id="@+id/shoeInformation"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="@string/shoeInformation"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"></TextView>

        <EditText
            android:id="@+id/useAns5"
            android:layout_width="111dp"
            android:layout_height="34dp"
            android:layout_marginBottom="4dp"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/textView10"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.263"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck,TouchTargetSizeCheck"></EditText>

        <Button
            android:id="@+id/submitForm"
            android:layout_width="82dp"
            android:layout_height="48dp"
            android:layout_marginBottom="16dp"
            android:text="@string/submit_Form"
            android:textSize="10sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"></Button>

        <TextView
            android:id="@+id/ShoeName"
            android:layout_width="241dp"
            android:layout_height="60dp"
            android:layout_marginTop="40dp"
            android:text="@string/shoe_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.504"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/shoeInformation" />

        <CheckBox
            android:id="@+id/marketAvailability"
            android:layout_width="172dp"
            android:layout_height="50dp"
            android:layout_marginBottom="20dp"
            android:text="Place on Market?"
            app:layout_constraintBottom_toTopOf="@+id/submitForm"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/exitView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="28dp"
            android:text="X"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>