<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Profile">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="400dp"
        android:layout_height="163dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="102dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="32dp"
            android:layout_marginRight="20dp">

            <TextView
                android:id="@+id/UserSettings"
                android:layout_width="370dp"
                android:layout_height="100dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="-1dp"
                android:layout_marginBottom="0dp"
                android:fontFamily="casual"
                android:text="@string/Stash"
                android:textColor="#000000"
                android:textColorHint="#090909"
                android:textSize="20sp" />
        </RelativeLayout>

    </LinearLayout>

    <Button
        android:id="@+id/addNew"
        android:layout_width="118dp"
        android:layout_height="70dp"
        android:layout_marginTop="400dp"
        android:layout_marginEnd="60dp"
        android:text="@string/add_Sneaker"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/viewStash"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.02" />

    <Button
        android:id="@+id/viewStash"
        android:layout_width="118dp"
        android:layout_height="70dp"
        android:layout_marginTop="402dp"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="96dp"
        android:text="@string/view_Stash"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="255dp"
        android:layout_height="167dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/treasurechest" />


</androidx.constraintlayout.widget.ConstraintLayout>